<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>2.3.4.RELEASE</version>
		<relativePath /> <!-- lookup parent from repository -->
	</parent>

	<groupId>com.zhrenjie04.alex</groupId>
	<artifactId>ep-backend</artifactId>
	<version>2020.9</version>
	<packaging>pom</packaging>

  	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
		<java.version>11</java.version>
		<springfox.version>3.0.0</springfox.version>
		<zookeeper.version>3.5.5</zookeeper.version>
		<jjwt.version>0.7.0</jjwt.version>
		<apache-commons-text.version>1.7</apache-commons-text.version>
		<log4jdbc.version>1.2</log4jdbc.version>
		<commons-fileupload.version>1.3.3</commons-fileupload.version>
		<mybatis-spring-boot-starter.version>2.1.3</mybatis-spring-boot-starter.version>
		<mybatis.version>3.5.5</mybatis.version>
		<spring-boot-admin.version>2.2.3</spring-boot-admin.version>
		<lombok.version>1.18.12</lombok.version>
		<spring-cloud.version>Hoxton.SR8</spring-cloud.version>
		<spring-boot-admin-starter-client.version>2.2.3</spring-boot-admin-starter-client.version>
		<rxnetty.version>0.4.9</rxnetty.version>
		<mongo-java-driver.version>3.10.2</mongo-java-driver.version>
		<lombok.version>1.18.12</lombok.version>
		
		<ep-core.version>2.0.4</ep-core.version>
		<ep-admin.version>0.0.3</ep-admin.version>
		<ep-gateway.version>0.0.3</ep-gateway.version>
		
		<ep-manager-domain.version>0.0.4</ep-manager-domain.version>
		<ep-manager-interface.version>0.0.4</ep-manager-interface.version>
		<ep-manager-service.version>0.0.4</ep-manager-service.version>
		<ep-message-domain.version>0.0.4</ep-message-domain.version>
		<ep-message-interface.version>0.0.4</ep-message-interface.version>
		<ep-message-service.version>0.0.4</ep-message-service.version>
		<ep-cms.version>0.0.4</ep-cms.version>
		<ep-ip-tunnel-swap-service.version>0.0.4</ep-ip-tunnel-swap-service.version>
		<ep-tcp-service.version>0.0.4</ep-tcp-service.version>

		<ep-user-domain.version>2.0.4</ep-user-domain.version>
		<ep-user-interface.version>2.0.4</ep-user-interface.version>
		<ep-user-service.version>2.0.4</ep-user-service.version>
	</properties>
	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>org.springframework.cloud</groupId>
				<artifactId>spring-cloud-dependencies</artifactId>
				<version>${spring-cloud.version}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
		</dependencies>
	</dependencyManagement>
</project>